# g-golf

./: .gitignore  INSTALL  Makefile.am  NEWS  README  configure.ac  g-golf.scm  pre-inst-env.in
am/: guile.mk
doc/: Makefile.am  api-arg-info.texi  api-base-info.texi  api-common-types.texi  api-function-info.texi  api-gdk-events.texi  api-gdk.texi  api-gir.texi  api-glib-gslist.texi  api-glib-io-channels.texi  api-gobject-gen-vals.texi  api-gobject-param-spec.texi  api-gobject-params-vals.texi  api-gobject-signals.texi  api-gobject-type-info.texi  api-hl-api-function.texi  api-hl-api-gtype.texi  api-hl-api-import.texi  api-hl-api.texi  api-interface-info.texi  api-object-info.texi  api-overview.texi  api-support-enum.texi  api-support-struct.texi  api-support-union.texi  api-support-utils.texi  api.texi  cr-gdk-event-structures.texi  cr-gdk-events.texi  cr-gdk.texi  cr-gi-arg-info.texi  cr-gi-base-info.texi  cr-gi-callable-info.texi  cr-gi-interface-info.texi  cr-gi-object-info.texi  cr-gi-property-info.texi  cr-gi-registered-type-info.texi  cr-gi-repository.texi  cr-gi-typelib.texi  cr-gi-utilities.texi  (+70 more)
doc/css/: manual.css
examples/: Makefile.am
examples/gtk-4/: Makefile.am  clipboard.scm  hello-world.scm  revealer.scm  search-bar.scm
g-golf/: gdk.scm  gi.scm  glib.scm  gobject.scm  hl-api.scm  init.scm  override.scm  support.scm
g-golf/gdk/: event-structures.scm  events.scm  key-values.scm
g-golf/gi/: arg-info.scm  base-info.scm  cache-gi.scm  cache-others.scm  cache.scm  common-types.scm  enum-info.scm  function-info.scm  interface-info.scm  object-info.scm  property-info.scm  registered-type-info.scm  repository.scm  signal-info.scm  struct-info.scm  union-info.scm  utils.scm
g-golf/glib/: gslist.scm  io-channels.scm  misc-util-funcs.scm  unix-utils.scm
g-golf/gobject/: boxed-types.scm  generic-values.scm  gobject.scm  param-spec.scm  params-vals.scm  signals.scm  type-info.scm
g-golf/hl-api/: closure.scm  function.scm  glib.scm  gobject.scm  gtype.scm  import.scm  object.scm  signal.scm  utils.scm
g-golf/override/: gdk.scm  gtk.scm  override.scm
g-golf/support/: enum.scm  flag.scm  flags.scm  goops.scm  libg-golf.scm  module.scm  struct.scm  union.scm  utils.scm
libg-golf/: Makefile.am  libg-golf.c  libg-golf.h
test-suite/: Makefile.am
test-suite/tests/: gi.scm  glib.scm  gobject.scm  hl-api.scm  override.scm  support.scm
